# multicurryable

./: .gitignore  CHANGELOG.md  LICENSE  README.md  multicurryable.cabal  shell.nix
.github/workflows/: haskell-ci.yml
lib/: Multicurryable.hs
test/: Main.hs  doctests.hs  tests.hs
