cabal-version:      3.4
name:               bunchable
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Díaz
maintainer:         diaz_carrete@yahoo.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Bunchable
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.16.3.0,
        sop-core ^>= 0.5.0.2
    hs-source-dirs:   lib
    default-language: GHC2021

test-suite bunchable-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.3.0,
        bunchable
